--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^0.15.3",
+    "codemirror": "^5.21.0",
     "element-ui": "^1.0.7",
     "moment": "^2.17.1",
     "vue": "^2.1.0",
