--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^0.15.3",
+    "chart.js": "^2.4.0",
     "codemirror": "^5.21.0",
     "element-ui": "^1.0.7",
     "highlight.js": "^9.9.0",
