--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "moment": "^2.17.1",
     "vue": "^2.1.0",
     "vue-router": "^2.1.1",
-    "vuex": "^2.0.0"
+    "vuex": "^2.0.0",
+    "vuex-router-sync": "^3.0.0"
   },
   "devDependencies": {
     "babel-core": "^6.0.0",
