--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "vue": "^2.1.0",
     "vue-router": "^2.1.1",
     "vuex": "^2.0.0",
-    "vuex-router-sync": "^3.0.0"
+    "vuex-router-sync": "^3.0.0",
+    "wordcloud": "^1.0.5"
   },
   "devDependencies": {
     "babel-core": "^6.0.0",
